developer/src/kmc-package/test/fixtures/invalid/error_package_must_contain_a_model_or_a_keyboard.kps
<?xml version="1.0" encoding="utf-8"?>
<Package>
  <System>
    <KeymanDeveloperVersion>15.0.266.0</KeymanDeveloperVersion>
    <FileVersion>7.0</FileVersion>
  </System>
  <Info>
    <Name URL="">error_package_must_contain_a_model_or_a_keyboard</Name>
    <Version>1.3</Version>
  </Info>
  <Files>
    <File>
      <!-- error_package_must_contain_a_model_or_a_keyboard. This is a common error:
           to include a .kmn instead of a .kmx -->
      <Name>khmer_angkor.kmn</Name>
      <Description>Keyboard Khmer Angkor</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.kmn</FileType>
    </File>
  </Files>
</Package>
